@@ -224,6 +224,8 @@
 #define STRING_COLUMN_LABEL_SCHED    "Planifiée"
 #define STRING_COLUMN_LABEL_UDA      "Nom"
 #define STRING_COLUMN_LABEL_TYPE     "Type"
+#define STRING_COLUMN_LABEL_MODIFY   "Modifiable"
+#define STRING_COLUMN_LABEL_NOMODIFY "Read Only"
 #define STRING_COLUMN_LABEL_LABEL    "Étiq"
 #define STRING_COLUMN_LABEL_DEFAULT  "Défaut"
 #define STRING_COLUMN_LABEL_VALUES   "Valeurs autorisées"
